refactor: minor performance updates